# learn-faster-kit

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  version-and-changelog.yml
src/learn_faster/: __init__.py
src/learn_faster/cli/: __init__.py  main.py
src/learn_faster/templates/: instructions.md
src/learn_faster/templates/agents/: practice-creator.md
src/learn_faster/templates/commands/: learn.md  progress.md  review.md
src/learn_faster/templates/modes/balanced/agents/: practice-creator.md
src/learn_faster/templates/modes/balanced/commands/: learn.md  progress.md
src/learn_faster/templates/modes/balanced/system_prompts/: learn-faster.md
src/learn_faster/templates/modes/exam/agents/: exam-generator.md  practice-creator.md
src/learn_faster/templates/modes/exam/commands/: generate-exam.md  learn.md
src/learn_faster/templates/modes/exam/system_prompts/: learn-faster.md
src/learn_faster/templates/modes/practical/agents/: practice-creator.md
src/learn_faster/templates/modes/practical/commands/: learn.md  review.md
src/learn_faster/templates/modes/practical/system_prompts/: learn-faster.md
src/learn_faster/templates/modes/programming/agents/: practice-creator.md
src/learn_faster/templates/output_styles/: learn-faster.md
src/learn_faster/templates/references/: faster_framework.md
src/learn_faster/templates/scripts/: concept_quiz.py  generate_exam_pdf.py  generate_syllabus.py  init_learning.py  log_progress.py  review_scheduler.py
src/learn_faster/templates/system_prompts/: learn-faster.md
(+4 files in other folders)
